adjust btn-primary class to try to fix contrast errors

--- a/readersrealm/static/css/style.css
+++ b/readersrealm/static/css/style.css
@@ -142,6 +142,12 @@ footer {
 }
 
 
+.btn-primary {
+    background-color: #cce5ff; /* Lighter blue color */
+    color: #004085; /* Darker text color for better contrast */
+    border: 1px solid #b8daff; /* Border in a slightly darker blue color */
+}
+
 /* Mobile media queries */
 @media screen and (max-width: 320px) {
     .register-form {
